--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "react-html-parser": "^2.0.2",
     "react-i18next": "^11.8.5",
     "react-icons": "^4.1.0",
-    "react-js-pagination": "^3.0.3",
     "react-markdown": "^5.0.3",
+    "react-paginate": "^8.3.0",
     "react-rewards": "^1.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
