--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fgpe-ple-v2",
   "version": "0.1.0",
   "license": "GPL-3.0",
+  "resolutions": {
+    "prismjs": "1.30.0"
+  },
   "dependencies": {
     "@apollo/client": "^3.3.17",
     "@chakra-ui/icons": "1.0.3",
@@ -52,7 +55,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-simple-code-editor": "^0.11.0",
-    "react-syntax-highlighter": "^15.4.3",
+    "react-syntax-highlighter": "^15.6.1",
     "react-table": "^7.6.3",
     "sanitize-html": "^2.17.0",
     "subscriptions-transport-ws": "^0.10.0",
