Implement OIDC migration - pending server connectivity testing

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,9 @@
-REACT_APP_KEYCLOAK_CLIENT_ID=fgpe-learning-platform
-REACT_APP_KEYCLOAK_REALM=FGPE
-REACT_APP_KEYCLOAK_URL=https://python.usz.edu.pl/auth
+# NOVO SERVIDOR (tentar novamente)
+REACT_APP_KEYCLOAK_CLIENT_ID=fgpe-backend
+REACT_APP_KEYCLOAK_REALM=fgpe
+REACT_APP_KEYCLOAK_URL=https://82.145.68.12:8443
+
+# MANTER OS OUTROS
 REACT_APP_API_URI=https://python.usz.edu.pl/gamification-service
 REACT_APP_GRAPHQL_URI=https://python.usz.edu.pl/gamification-service/graphql
 REACT_APP_GRAPHQL_WS=wss://python.usz.edu.pl/gamification-service/graphql
