--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "@chakra-ui/react": "1.1.5",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
-    "@fgpe/keycloak-js": "^1.0.4",
     "@monaco-editor/react": "4.0.4",
     "@react-keycloak/keycloak-ts": "^0.2.4",
-    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -37,6 +35,7 @@
     "i18next-http-backend": "^1.1.1",
     "js-cookie": "^3.0.1",
     "monaco-themes": "^0.3.3",
+    "oidc-client-ts": "^3.3.0",
     "prismjs": "^1.30.0",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
@@ -52,7 +51,7 @@
     "react-markdown": "^5.0.3",
     "react-paginate": "^8.3.0",
     "react-rewards": "^1.1.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.6.1",
